--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.52.1",
+    "@tanstack/react-query": "^4.40.1",
+    "@tanstack/react-query-devtools": "^4.40.1",
+    "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
     "styled-components": "^6.1.19"
   },
